# arxivlens

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: reranker.yaml  reranker_listwise.yaml
notebooks/: attention_demo.ipynb
scripts/: build_pairs.py  smoke_test.py  validate_pair_groups.py
slurm/: eval_reranker.sh  improve_reranker.sh  train_reranker.sh
src/arxivlens/: __init__.py
src/arxivlens/data/: __init__.py  dataset.py  pairs.py
src/arxivlens/model/: __init__.py  attention.py  reranker.py  transformer.py
src/arxivlens/retrieve/: __init__.py  index.py  pipeline.py
src/arxivlens/serve/: __init__.py  api.py  schemas.py
src/arxivlens/train/: __init__.py  eval.py  losses.py  train_reranker.py
tests/: test_api_config.py  test_attention.py  test_dataset.py  test_eval.py  test_losses.py  test_pairs.py  test_pipeline.py  test_train_eval_distributed.py  test_transformer.py  test_validate_pair_groups.py
