[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arxivlens"
version = "0.1.0"
description = "RAG over ArXiv with a from-scratch cross-encoder reranker and attention-visualization lens"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Saketh Pate" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
